5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4486/executions/1592_1801.log
== TEST (2019-03-31 18:50:27) 
-- CODE:
Nome = input()
n = int(input())
nome_do_objeto = NOME
S = n * (Abra + nome_do_objeto)
print(S)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    nome_do_objeto = NOME
NameError: name 'NOME' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 18:50:49) 
-- CODE:
Nome = input()
n = int(input())
nome_do_objeto = nome
S = n * (Abra + nome_do_objeto)
print(S)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    nome_do_objeto = nome
NameError: name 'nome' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 18:51:03) 
-- CODE:
nome = input()
n = int(input())
nome_do_objeto = nome
S = n * (Abra + nome_do_objeto)
print(S)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    S = n * (Abra + nome_do_objeto)
NameError: name 'Abra' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 18:51:21) 
-- CODE:
nome = input()
n = int(input())
nome_do_objeto = nome
S = n * ("Abra" + nome_do_objeto)
print(S)
-- OUTPUT:
AbralivroAbralivroAbralivroAbralivroAbralivroAbralivroAbralivroAbralivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 18:51:53) 
-- CODE:
nome = input()
n = int(input())
nome_do_objeto = nome
S = n * ("Abra" + nome_do_objeto + " ")
print(S)
-- OUTPUT:
Abralivro Abralivro Abralivro Abralivro Abralivro Abralivro Abralivro Abralivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 18:52:09) 
-- CODE:
nome = input()
n = int(input())
nome_do_objeto = nome
S = n * ("Abra " + nome_do_objeto + " ")
print(S)
-- OUTPUT:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 18:52:23) 
-- CODE:
nome = input()
n = int(input())
nome_do_objeto = nome
S = n * ("Abra " + nome_do_objeto + " ")
print(S)
-- EXECUTION TIME:
0.127982
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra carro Abra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra caixa
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
